# Projet-MMO-2D

./: .flake8  .gitignore  FLATPAK_AUTO_UPDATE.md  GUIDE_RAPIDE.txt  README.md  README_OLD.md  RESTRUCTURATION.md  TIMELINE_DETAILLEE.txt  VISUAL_IMPROVEMENTS.md  check.py  config.py  launch.py  main.py  menu.py  pyproject.toml  requirements.txt  savegame.json  script.txt  settings.json  start_game.sh  test_integration.py  test_launch.py  test_performance.py  test_setup.py
core/: __init__.py  game_manager.py  items.py
data/: savegame.json
docs/: MUSIC_LICENSES.md  STRUCTURE.md
game/: __init__.py  building.py  camera.py  constants.py  controls_hint.py  core.py  day_night.py  enemy.py  factions.py  gameplay_manager.py  hud.py  item_system.py  minimap.py  natural_world.py  particles.py  player.py  render_manager.py  save.py  sound_manager.py  sprite_manager.py  tiletype.py  transitions.py  tutorial.py  world.py
items/: __init__.py  crafting.py  inventory.py  item.py  recipes.py
packaging/: io.github.Estemobs.ProjetMMO2D.desktop  io.github.Estemobs.ProjetMMO2D.yml  projetmmo2d.spec  run.sh
scripts/: README.md  create_entity_sprites.py  create_large_characters.py  create_missing_sprites.py  create_tombstone.py  generate_characters_and_items.py  generate_missing_items.py  generate_natural_sprites.py  generate_sprites.py  launch.py  rapport_menu.py  test_controls.py  test_f5_menu.py  test_integration.py  test_menu.py  test_menu_complet.py  test_simulation_complete.py  validation_ameliorations.py  validation_finale.py  validation_finale_complete.py
ui/: __init__.py  (+6 more)
(+9 files in other folders)
